# smartcar

./: .env.local.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  shell.nix  spec
.githooks/: pre-push
.github/: dependabot.yml
.github/actions/provision/: action.yml
.github/actions/setup-init/: action.yml
.github/workflows/: ansible.yml  ci.yml  flutter.yml
apps/android/: README.md
apps/ios/: README.md
board/: README.md  ansible.cfg  inventory.yml  site.yml
board/group_vars/: all.yml
board/roles/base/tasks/: main.yml
board/roles/bluetooth/handlers/: main.yml
board/roles/bluetooth/tasks/: main.yml
board/roles/bluetooth/templates/: main.conf.j2
board/roles/fake_hwclock/tasks/: main.yml
board/roles/journal/handlers/: main.yml
board/roles/journal/tasks/: main.yml
board/roles/journal/templates/: 10-smartcar.conf.j2
board/roles/network/handlers/: main.yml
board/roles/network/tasks/: main.yml
board/roles/network/templates/: 30-usb0.network.j2  40-wlan0.network.j2  wpa_supplicant-wlan0.conf.j2
board/roles/smartcar_server/handlers/: main.yml
board/roles/smartcar_server/tasks/: main.yml
board/roles/smartcar_server/templates/: smartcar-server.service.j2
board/roles/usb_gadget/files/: g_ether-load.service  usb-gadget.conf  usb-mode.service
board/roles/usb_gadget/handlers/: main.yml
board/roles/usb_gadget/tasks/: main.yml
board/roles/usb_gadget/templates/: g_ether-modprobe.conf.j2  usb-mode-select.sh.j2
docker/: docker-compose.yml  entrypoint.sh  openauto.Dockerfile
docs/: architecture.md  board-setup.md  workstreams.md
docs/protocol/: 00-overview.md  01-physical-transport.md  02-framing.md  03-control-channel.md  04-tls-auth.md  05-service-discovery.md  06-channel-lifecycle.md  07-video-channel.md  08-input-channel.md  09-audio-sensor-other.md  10-message-catalog.md  11-aacs-client-socket.md  12-sequences.md  README.md
scripts/: assign_board.py  board_provision.py  bootstrap.py  build_openauto.py  common.py  debug_usb_gadget.py  deploy.py  deploy_board.py  init.py  openauto_macos_stubs.hpp  review.py  run_board.py  run_emulator.py  run_openauto.py  run_openauto_native.py  run_server.py  run_stack.py
scripts/patches/openauto/: macos-bluetooth-adapter-stub.patch  macos-gps-crash.patch  macos-port-window.patch  macos-windowed-video.patch
server/: Cargo.toml  Cross.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
server/crates/aap-audio/: Cargo.toml
server/crates/aap-audio/src/: config.rs  convert.rs  format.rs  lib.rs  mixer.rs  resampler.rs  service.rs  source.rs  stream.rs
server/crates/aap-bridge/: Cargo.toml  build.rs
server/crates/aap-bridge/examples/: smoketest.rs
server/crates/aap-bridge/proto/: control.proto
server/crates/aap-bridge/src/: gatt.rs  lib.rs  tcp.rs  transport.rs
server/crates/aap-contracts/: Cargo.toml
server/crates/aap-contracts/src/: channel.rs  frame.rs  lib.rs  message.rs  service.rs  transport.rs
server/crates/aap-core/: Cargo.toml
server/crates/aap-core/src/: connection.rs  control.rs  lib.rs  registry.rs  video_encoder.rs
server/crates/aap-flutter/: Cargo.toml  build.rs
server/crates/aap-flutter/src/: decoder.rs  engine.rs  ffi.rs  lib.rs  lib_loader.rs  producer.rs  sink.rs  texture.rs
server/crates/aap-input/: Cargo.toml
server/crates/aap-input/src/: lib.rs
server/crates/aap-proto/: Cargo.toml  build.rs
server/crates/aap-proto/src/: lib.rs
server/crates/aap-testkit/: Cargo.toml
server/crates/aap-testkit/src/: audio.rs  lib.rs  video.rs
server/crates/aap-transport/: Cargo.toml  build.rs
server/crates/aap-transport/src/: codec.rs  lib.rs  tcp.rs  tls.rs
server/crates/aap-transport/src/bt/: error.rs  handshake.rs  mod.rs  pair.rs  proto.rs  rfcomm.rs  wpa.rs
server/crates/aap-transport/src/usb/: descriptors.rs  gadget.rs  mod.rs
server/crates/aap-video/: Cargo.toml
server/crates/aap-video/src/: channel.rs  config.rs  lib.rs  mode.rs  service.rs  sink.rs
server/crates/smartcar-server/: Cargo.toml  build.rs
server/crates/smartcar-server/src/: main.rs
server/flutter-ui/: .gitignore  pubspec.yaml
server/flutter-ui/lib/: main.dart
server/flutter-ui/test/: placeholder_test.dart
