[workspace]
resolver = "2"
members = [
    "crates/aap-contracts",
    "crates/aap-proto",
    "crates/aap-transport",
    "crates/aap-core",
    "crates/aap-video",
    "crates/aap-audio",
    "crates/aap-input",
    "crates/aap-testkit",
    "crates/aap-flutter",
    "crates/aap-bridge",
    "crates/smartcar-server",
]

[workspace.package]
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.83"
repository   = "https://github.com/arhelmus/smartcar"

[workspace.dependencies]
# Internal
aap-contracts = { path = "crates/aap-contracts" }
aap-proto     = { path = "crates/aap-proto" }
aap-transport = { path = "crates/aap-transport" }
aap-core      = { path = "crates/aap-core" }
aap-video     = { path = "crates/aap-video" }
aap-audio     = { path = "crates/aap-audio" }
aap-input     = { path = "crates/aap-input" }
aap-testkit   = { path = "crates/aap-testkit" }
aap-flutter   = { path = "crates/aap-flutter" }
aap-bridge    = { path = "crates/aap-bridge" }

# External — pinned majors, agents in W1–W6 may bump minor versions
async-trait        = "0.1"
bitflags           = "2"
bytes              = "1"
thiserror           = "2"
anyhow             = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap               = { version = "4", features = ["derive", "env"] }
prost              = "0.14"
prost-build        = "0.14"
openssl            = "0.10"
bluer              = { version = "0.17", default-features = false, features = ["bluetoothd", "rfcomm"] }
uuid               = { version = "1" }
futures            = "0.3"

[profile.release]
lto      = "thin"
codegen-units = 1
strip    = "symbols"
