[package]
name        = "aap-bridge"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
anyhow    = { workspace = true }
bytes     = { workspace = true }
prost     = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
uuid      = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
bluer   = { workspace = true }
futures = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "smoketest"
path = "examples/smoketest.rs"
