[package]
name        = "aap-contracts"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bitflags    = { workspace = true }
bytes       = { workspace = true }
thiserror   = { workspace = true }
