[package]
name        = "aap-core"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aap-contracts = { workspace = true }
aap-proto     = { workspace = true }
aap-transport = { workspace = true }
aap-video     = { path = "../aap-video" }
async-trait   = { workspace = true }
bytes         = { workspace = true }
prost         = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
