[package]
name        = "aap-flutter"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
# Marks this as the sole owner of the Flutter engine native lib and lets the
# build script publish `cargo:` metadata (e.g. enginedir) to the binary crate's
# build script via DEP_FLUTTER_ENGINE_* — needed to set the binary's rpath,
# which a library build script's rustc-link-arg cannot do.
links       = "flutter_engine"

[dependencies]
aap-video   = { path = "../aap-video" }
aap-input   = { path = "../aap-input" }
bytes       = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
openh264    = "0.8"
parking_lot = "0.12"
