[package]
name        = "aap-flutter"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aap-video   = { path = "../aap-video" }
aap-input   = { path = "../aap-input" }
bytes       = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
openh264    = "0.8"
parking_lot = "0.12"
# Runtime dlopen of libflutter_engine.so so the 96 MB mmap + C++ static
# initialisers happen *after* the USB gadget is on the bus, not during the
# binary's pre-main() phase. See src/lib_loader.rs.
libloading  = "0.8"

# Extract the downloaded linux-arm64 engine zip from build.rs without
# depending on a system `unzip` binary (the cross container doesn't ship one).
[build-dependencies]
zip = { version = "8", default-features = false, features = ["deflate"] }
