[package]
name        = "aap-input"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aap-contracts = { workspace = true }
aap-proto     = { workspace = true }
async-trait   = { workspace = true }
bytes         = { workspace = true }
prost         = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
