[package]
name        = "aap-testkit"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aap-audio = { path = "../aap-audio" }
aap-video = { path = "../aap-video" }
anyhow    = { workspace = true }
bytes     = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
openh264  = "0.8.1"

# WAV file loading for the file-based audio producer
hound = "3"
