[package]
name        = "aap-transport"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aap-contracts = { workspace = true }
async-trait   = { workspace = true }
bytes         = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
openssl       = { workspace = true }

[features]
# Statically build & link OpenSSL instead of using the system library.
# Enabled for cross/board builds where the target's libssl ABI differs
# from the cross toolchain's (e.g. Debian 13 ships libssl.so.3 only).
openssl-vendored = ["openssl/vendored"]
