[package]
name        = "smartcar-server"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aap-contracts      = { workspace = true }
aap-core           = { workspace = true }
aap-transport      = { workspace = true }
aap-video          = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
