[package]
name        = "smartcar-server"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aap-contracts      = { workspace = true }
aap-core           = { workspace = true }
aap-transport      = { workspace = true }
aap-video          = { workspace = true }
aap-audio          = { workspace = true }
aap-input          = { workspace = true }
aap-testkit        = { workspace = true }
aap-flutter        = { workspace = true }
aap-bridge         = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Statically vendor OpenSSL — used for cross/board builds so the binary
# has no runtime libssl dependency on the target.
openssl-vendored = ["aap-transport/openssl-vendored"]
